[project]
name = "screenshot_mailinator_email"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
  "playwright==1.55.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "ruff==0.14.0",
  "vulture==2.14",
  "ty==0.0.1a21",
]

[tool.uv]
required-version = "~=0.9.0"
package = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201"     # Ignore print statements
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.vulture]
ignore_names = ["side_effect"]
